--- a/my-app/Dockerfile
+++ b/my-app/Dockerfile
@@ -1,29 +1,17 @@
-# Use the official golang image as the base image
-FROM golang:1.18 AS builder
+# Use an official Go runtime as the base image
+FROM golang:1.16
 
-# Set the working directory inside the container
+# Set the working directory in the container
 WORKDIR /app
 
-# Copy the Go modules files
-COPY go.mod go.sum ./
-
-# Download and install Go dependencies
-RUN go mod download
-
-# Copy the rest of the application code
+# Copy the local package files to the container's workspace
 COPY . .
+
+# Install any dependencies required by your Go application
+RUN go mod download
 
 # Build the Go application
 RUN go build -o main .
-
-# Start a new stage from scratch
-FROM golang:1.18
-
-# Set the working directory inside the container
-WORKDIR /app
-
-# Copy the built executable from the previous stage
-COPY --from=builder /app/main .
 
 # Expose port 8080 to the outside world
 EXPOSE 8080
