--- a/my-app/docker-compose.yml
+++ b/my-app/docker-compose.yml
@@ -1,25 +1,10 @@
-version: '3.8'
+version: '3'
 
 services:
-  postgres:
-    image: postgres:16
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: sql
-      POSTGRES_DB: gorm
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-
-  redis:
-    image: redis:6
-    ports:
-      - "6379:6379"
-
   app:
-    build:
-      context: .
+    build: .
+    ports:
+      - "8080:8080"
     environment:
       DB_HOST: postgres
       DB_USER: postgres
@@ -29,8 +14,22 @@ services:
     depends_on:
       - postgres
       - redis
+
+  postgres:
+    image: postgres:latest
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: sql
+      POSTGRES_DB: gorm
     ports:
-      - "8080:8080"
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
 
 volumes:
-  postgres_data:
+  postgres-data:
