--- a/my-app/docker-compose.yml
+++ b/my-app/docker-compose.yml
@@ -1,35 +1,48 @@
-version: '3'
+version: '3.8'
 
 services:
-  app:
-    build: .
-    ports:
-      - "8080:8080"
+  db:
+    image: postgres:13
     environment:
-      DB_HOST: postgres
-      DB_USER: postgres
-      DB_PASSWORD: sql
-      DB_NAME: gorm
-      REDIS_ADDR: redis:6379
-    depends_on:
-      - postgres
-      - redis
-
-  postgres:
-    image: postgres:latest
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: sql
+      POSTGRES_USER: your_user
+      POSTGRES_PASSWORD: your_password
       POSTGRES_DB: gorm
     ports:
       - "5432:5432"
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - db_data:/var/lib/postgresql/data
 
   redis:
-    image: redis:latest
+    image: redis:alpine
     ports:
       - "6379:6379"
 
+  backend:
+    build: .
+    environment:
+      DB_HOST: db
+      DB_USER: your_user
+      DB_PASSWORD: your_password
+      DB_NAME: gorm
+      REDIS_ADDR: redis:6379
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+      - redis
+
+  frontend:
+    image: node:16-alpine
+    working_dir: /app
+    volumes:
+      - ./my-app:/app
+    command: sh -c "npm install && npm run build && npx serve -s build"
+    ports:
+      - "3000:3000"
+    environment:
+      REACT_APP_API_URL: https://main--teamzoko.netlify.app/
+    depends_on:
+      - backend
+
 volumes:
-  postgres-data:
+  db_data:
