--- a/my-app/docker-compose.yml
+++ b/my-app/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   db:
     image: postgres:13
     environment:
-      POSTGRES_USER: your_user
-      POSTGRES_PASSWORD: your_password
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: sql
       POSTGRES_DB: gorm
     ports:
       - "5432:5432"
@@ -20,9 +20,9 @@ services:
   backend:
     build: .
     environment:
-      DB_HOST: db
-      DB_USER: your_user
-      DB_PASSWORD: your_password
+      DB_HOST: localhost
+      DB_USER: postgres
+      DB_PASSWORD: sql
       DB_NAME: gorm
       REDIS_ADDR: redis:6379
     ports:
