--- a/my-app/backend/.env
+++ b/my-app/backend/.env
@@ -1,7 +1,7 @@
-DB_HOST=localhost
+DB_HOST=dpg-cpjjv4v109ks73enig90-a
 DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=sql
-DB_NAME=gorm
+DB_USER=gorm_9quj_user
+DB_PASSWORD=hD5mDhAavIu2YUC4nxYa6YubcvDAoS2P
+DB_NAME=gorm_9quj
 REDIS_ADDR=localhost:6379
 
