--- a/my-app/Dockerfile
+++ b/my-app/Dockerfile
@@ -1,17 +1,29 @@
-# Use an official Go runtime as the base image
-FROM golang:1.16
+# Use the official golang image as the base image
+FROM golang:1.18 AS builder
 
-# Set the working directory in the container
+# Set the working directory inside the container
 WORKDIR /app
 
-# Copy the local package files to the container's workspace
-COPY . .
+# Copy the Go modules files
+COPY go.mod go.sum ./
 
-# Install any dependencies required by your Go application
+# Download and install Go dependencies
 RUN go mod download
+
+# Copy the rest of the application code
+COPY . .
 
 # Build the Go application
 RUN go build -o main .
+
+# Start a new stage from scratch
+FROM golang:1.18
+
+# Set the working directory inside the container
+WORKDIR /app
+
+# Copy the built executable from the previous stage
+COPY --from=builder /app/main .
 
 # Expose port 8080 to the outside world
 EXPOSE 8080
