--- a/my-app/docker-compose.yml
+++ b/my-app/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.8'
 
 services:
-  db:
-    image: postgres:13
+  postgres:
+    image: postgres:16
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: sql
@@ -10,39 +10,27 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
 
   redis:
-    image: redis:alpine
+    image: redis:6
     ports:
       - "6379:6379"
 
-  backend:
-    build: .
+  app:
+    build:
+      context: .
     environment:
-      DB_HOST: localhost
+      DB_HOST: postgres
       DB_USER: postgres
       DB_PASSWORD: sql
       DB_NAME: gorm
       REDIS_ADDR: redis:6379
+    depends_on:
+      - postgres
+      - redis
     ports:
       - "8080:8080"
-    depends_on:
-      - db
-      - redis
-
-  frontend:
-    image: node:16-alpine
-    working_dir: /app
-    volumes:
-      - ./my-app:/app
-    command: sh -c "npm install && npm run build && npx serve -s build"
-    ports:
-      - "3000:3000"
-    environment:
-      REACT_APP_API_URL: https://main--teamzoko.netlify.app/
-    depends_on:
-      - backend
 
 volumes:
-  db_data:
+  postgres_data:
