--- a/my-app/.env
+++ b/my-app/.env
@@ -1,6 +1,6 @@
-DB_HOST=localhost
+DB_HOST=dpg-cpjjv4v109ks73enig90-a
 DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=sql
-DB_NAME=gorm
-REDIS_ADDR=localhost:6379
+DB_USER=gorm_9quj_user
+DB_PASSWORD=hD5mDhAavIu2YUC4nxYa6YubcvDAoS2P
+DB_NAME=gorm_9quj
+REDIS_URL=redis://red-cpjt7uqcn0vc73as7v4g:6379
